--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,11 +13,33 @@
     padding: 25px;
     border-radius: 20px;
 }
+.image {
+    position: relative;
+}
+.image div {
+    position: absolute;
+    background-color: hsl(178, 100%, 50%, 50%);
+    top: 0;
+    height: 350px;
+    width: 350px;
+    opacity: 0;
+    border-radius: 10px;
+    transition: 0.3s;
+}
+.image div:hover {
+    opacity: 1;
+    cursor: pointer;
+}
+.image div img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 .card .nft {
     width: 350px;
     cursor: pointer;
     border-radius: 10px;
-    margin-bottom: 20px;
     transition: 0.3s;
 }
 .card .nft:hover {
@@ -27,7 +49,7 @@
     display: flex;
     color: #ffffff;
     font-size: 24px;
-    margin-bottom: 30px;
+    margin: 30px 0;
     font-weight: 600;
     transition: 0.3s;
 }
